kubernetes/apps/default/nextcloud/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
spec:
  hostnames: ["cloud.g-eye.io"]
  parentRefs:
    - name: external
      namespace: networking-system
      port: 443
  rules:
    - backendRefs:
        - name: nextcloud
          port: 8080
    - matches:
        - path:
            type: RegularExpression
            value: /.well-known/(?:card|cal)dav
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav/
            statusCode: 301
